--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
   margin-left: 80%;
   
   
+  
  
 }
 
@@ -25,7 +26,7 @@ body {
   width: 52px;
   height: 80px;
   border-radius: 50px 50px 0 0;
-  background: rgb(255, 0, 200);
+  background: rgb(179, 105, 163);
 }
 
 #heart::before {
@@ -40,6 +41,7 @@ body {
   transform-origin: 100% 100%;
 }
 
+/*
 @keyframes heartbeat {
   0% {
     transform: scale( 1 );    
@@ -63,12 +65,13 @@ body {
 .heart {
   padding: 1rem;
 }
-
+*/
 
 header {
   animation-duration: 2s;
   animation-name: slidein;
 }
+
 
 @keyframes slidein {
   from {
@@ -88,7 +91,7 @@ header {
 
 nav ul{
   list-style: none;
-  color: purple;
+  color: #d1edea;
   font-weight: bold;
   font-family: 'Quicksand', sans-serif;
   font-size: 14px;
@@ -97,6 +100,7 @@ nav ul{
   margin-right: auto;
   justify-content: space-evenly;
 }
+
 
 h1 {
   color: #754b61;
@@ -116,6 +120,15 @@ h2 {
   padding: 1rem;
   }
 
+h4 {
+    color: #754b61;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    font-weight: regular;
+  }
+
 p {
   font-family: 'Quicksand', sans-serif;
 }
@@ -130,29 +143,8 @@ p {
   
   /*padding is space inside borders, width and height for squares*/
 
-  /*
-  .projects li {
-    border: 5px solid purple;
-    background-color: #DB7093;
-    margin: 10px;
-    padding:10px;
-    height:12rem;
-    width:12rem;
-    display: inline-block;
-  }
-  */ 
 
-  
-   /*
-  .projects ol{
-    height:90%;
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: flex-start
-  }
-  */
+
 
   li h4 {
     margin: 0;
@@ -198,11 +190,12 @@ font-family: 'Quicksand', sans-serif;
       transition: opacity 0.35s ease;
  }
 
+ .projects li: active {
+   background: white;
+ }
 
    
-    .projects li {
-      justify-content: flex-start;
-    }
+
 
 
 
@@ -212,15 +205,13 @@ font-family: 'Quicksand', sans-serif;
       color: #754b61;
       background-color: #b58ebc;
       float: left;
-      width: 60%;
-      grid-column: 3 / 1;
-      grid-row: 3 / 1;
+      width: 80%;
       font-family: 'Quicksand', sans-serif;
     }
 
     .labs li {
-      width: 175px;
-      height: 175px;
+      width: 170px;
+      height: 170px;
       display: flex;
       flex-direction: column;
       justify-content: 1rem;
@@ -234,9 +225,9 @@ font-family: 'Quicksand', sans-serif;
 
     .labs ol {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-column-gap: 5px;
-      grid-row-gap: 5px;
+      grid-template-columns: repeat(4, 1fr);
+      grid-column-gap: 10px;
+      grid-row-gap: 10px;
       flex-wrap: nowrap;
       justify-content: start;
       align-content: align; /* only use for wrapped rows. Otherwise use align-items */
@@ -245,13 +236,19 @@ font-family: 'Quicksand', sans-serif;
   aside {
     background-color: #f2d7e8;
     display: flex;
-    padding-bottom: 431px;
+    padding-bottom: 8px;
+    
   }
+
   
 
 .projects li:hover{
       box-shadow: 5px 10px 10px rgba(0, 0, 0, .5);
     
+  }
+
+  .projects li:focus{
+    background-color: whitesmoke;
   }
 
  @keyframes li {
@@ -278,9 +275,6 @@ font-family: 'Quicksand', sans-serif;
 }
 
 
-  header, footer {
-    grid-column: 1 / 4;
-  }
 
   .about {
     background-color: #d1edea;
